# hermes-fleet

./: .gitignore  ARCHITECTURE.md  CLEANUP_PLAN.md  DESIGN_FOUNDATIONS.md  GIT_PLAN.md  LICENSE  PATCH_PLAN.md  PRUNE_PLAN.md  README.md  REPO_FLEET_MODE.md  RESEARCH_NOTES.md  REVIEW_REPORT.md  ROADMAP.md  SPEC.md  TEST_RESULTS.md  WORKFLOW.md  pyproject.toml
docs/: AGENCY_AGENTS_UPDATE_MODEL.md  CONTRACT_SCHEMAS.md  REVIEW_HUMANITIES_PERSPECTIVE.md
docs/design/: v0.4-isolation-runtime.md  v0.5-solitude-runtime.md
docs/reviews/: HUMANITIES_REVIEW_RESPONSE.md  PROJECT_HEALTH_REVIEW.md
presets/handoffs/: developer-reviewer.yaml  general-completion.yaml  orchestrator-developer.yaml  qa-feedback.yaml
presets/permissions/: backend_worktree_rw.yaml  docs_rw_repo_ro.yaml  frontend_worktree_rw.yaml  orchestrator_safe.yaml  readonly_no_network.yaml  repo_readonly.yaml  schema_worktree_rw.yaml  test_runner.yaml
presets/roles/: backend-developer.yaml  customer-support-specialist.yaml  database-architect.yaml  deployer.yaml  frontend-developer.yaml  fullstack-developer.yaml  growth-marketer.yaml  orchestrator.yaml  product-manager.yaml  qa-tester.yaml  reviewer.yaml  security-reviewer.yaml  technical-writer.yaml  ux-designer.yaml
presets/teams/: ai-app.yaml  content-creator.yaml  devops-deployment.yaml  general-dev.yaml  iphone-app.yaml  research-writing.yaml  saas-medium.yaml  security-audit.yaml
src/hermes_agency/: __init__.py  cli.py  contracts.py  generator.py  kanban_bridge.py  planner.py  policy.py  teams.py
tests/: __init__.py  test_checks.py  test_cli_generate.py  test_contract_schemas.py  test_contract_validation.py  test_cross_reference.py  test_deterministic_allocation.py  test_deterministic_onboarding.py  test_docker_compose_generation.py  test_end_to_end.py  test_handoff_runtime.py  test_hermetic_pipeline.py  test_kanban_templates.py  test_lifecycle.py  test_loader.py  test_network.py  test_planner.py  test_policy.py  test_policy_generation.py  test_runner.py  test_safe_defaults.py  test_soul_generation.py  test_team_presets.py  test_teams.py
(+21 files in other folders)
